# Nem3D

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: release.md
site/: index.html  styles.css
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Inspector.tsx  SceneViewport.tsx  StartGuide.tsx
src/lib/: fileBridge.ts  modelNames.ts  projectFile.ts
tests/: projectFile.test.ts
tests/e2e/: app.spec.ts
