[package]
name = "nem3d"
version = "0.1.1"
description = "Nem3D desktop app"
authors = ["Sigurd"]
edition = "2021"

[lib]
name = "nem3d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
